--- a/employee-audit.html
+++ b/employee-audit.html
@@ -99,6 +99,12 @@
       color: var(--text-muted);
     }
 
+    .container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 24px;
+}
+
     .card {
       background: var(--bg-card);
       border: 1px solid var(--border);
@@ -195,7 +201,9 @@
   </p>
   </section>
 
-  <section class="card">
+  <section>
+    <div class="container">
+      <div class="card">
     <h2>This Audit Helps Answer</h2>
     <ul>
       <li>Is this employee truly operating at the level the role requires?</li>
@@ -203,6 +211,8 @@
     <li>Is the employee equipped for upcoming organizational challenges?</li>
     <li>Does their mindset align with leadership expectations and company direction?</li>
     </ul>
+      </div>
+    </div>
   </section>
 
   <section>
@@ -215,7 +225,9 @@
   </ul>
   </section>
 
-  <section class="card">
+  <section>
+    <div class="container">
+      <div class="card">
     <h2>Evaluation Dimensions</h2>
     <ul>
       <li>Role-specific technical competence</li>
@@ -224,10 +236,12 @@
     <li>Ownership and accountability</li>
     <li>Learning agility and adaptability</li>
     <li>Communication clarity</li>
-    <li>Professional confidence and presence</li>
-    <li>Ethical reliability</li>
+    <li>Professional confidence under scrutiny</li>
+    <li>Ethical judgment and reliability</li>
     <li>Alignment with organizational priorities</li>
     </ul>
+      </div>
+    </div>
   </section>
 
   <section>
@@ -248,30 +262,36 @@
     </div>
   </section>
 
-  <section class="card">
+  <section>
+    <div class="container">
+      <div class="card">
     <h2>Audit Methodology</h2>
     <ul>
-      <li>Pre-audit role and context analysis</li>
-    <li>Customized scenario-based evaluation</li>
-    <li>One-on-one audit interaction (on-site or virtual)</li>
-    <li>Independent scoring using standardized frameworks</li>
-    <li>Confidential reporting and summary insights</li>
+      <li>Role and context analysis before interaction</li>
+    <li>Scenario-driven evaluation aligned to role complexity</li>
+    <li>Structured one-on-one audit interaction</li>
+    <li>Independent scoring across predefined dimensions</li>
+    <li>Independent scoring across predefined dimensions</li>
     </ul>
+      </div>
+    </div>
   </section>
 
   <section>
     <h2>Deliverables</h2>
     <ul>
-      <li>Pre-audit role and context analysis</li>
-    <li>Customized scenario-based evaluation</li>
-    <li>One-on-one audit interaction (on-site or virtual)</li>
-    <li>Independent scoring using standardized frameworks</li>
-    <li>Confidential reporting and summary insights</li>
+      <li>Role-fit assessment summary</li>
+    <li>Capability gap indicators (if any)</li>
+    <li>Risk exposure notes (short / medium term)</li>
+    <li>Readiness assessment for expanded responsibility</li>
+    <li>Executive-level audit summary (non-operational)</li>
     </ul>
     <p>Audit findings remain valid for <strong>6 months</strong>.</p>
   </section>
 
-  <section class="card">
+  <section>
+    <div class="container">
+      <div class="card">
     <h2>Engagement & Conduct Guidelines</h2>
     <ul>
       <li>Travel, accommodation, food, and local transport for on-site audits are borne by the client.</li>
@@ -281,6 +301,8 @@
     </ul>
 
     <a href="request-discussion.html" class="cta">Request a Professional Evaluation Discussion</a>
+      </div>
+    </div>
   </section>
 
   <div id="footer"></div>
