--- a/legal-guidelines.html
+++ b/legal-guidelines.html
@@ -98,6 +98,12 @@
       color: var(--text-muted);
     }
 
+    .container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 24px;
+}
+
     .card {
       background: var(--bg-card);
       border: 1px solid var(--border);
@@ -147,17 +153,28 @@
     </p>
   </header>
 
-  <section class="card">
+  <section>
+    <div class="container">
+      <div class="card">
     <h2>Nature of Services</h2>
     <p>
-      VEXOR provides independent capability, workforce, and organizational audits. Our services are evaluative in nature and do not constitute legal, financial, HR consulting, or advisory services.
+      VEXOR provides independent capability, workforce, and organizational audits.
     </p>
     <p>
-      Findings, observations, and recommendations are based on structured assessments and professional judgment at the time of audit.
-    </p>
+  Findings, observations, risk indicators, and decision inputs are based on structured assessments
+  and professional judgment at the time of audit.
+</p>
+
     <p>
         VEXOR does not provide statutory, regulatory, or compliance certifications.
     </p>
+    <p>
+  VEXOR does not participate in implementation, change management,
+  or execution of decisions arising from audit outcomes.
+</p>
+      </div>
+    </div>
+
   </section>
 
   <section>
@@ -167,16 +184,28 @@
       <li>Employee identities may be anonymized in reports where required.</li>
       <li>Audit data is used solely for the purpose of the engagement.</li>
       <li>VEXOR does not sell, trade, or misuse client data.</li>
+      <li>
+  Digital records are stored using reasonable security practices and
+  retained only for the duration necessary to complete the engagement.
+</li>
+
     </ul>
   </section>
 
-  <section class="card">
+  <section>
+    <div class="container">
+      <div class="card">
     <h2>Auditor Conduct & Disclosure</h2>
     <ul>
-      <li>Auditors do not disclose personal details such as age, contact number, or educational background.</li>
+<li>
+  Auditors do not disclose personal employee details such as age,
+  contact information, or educational background in reports unless explicitly required.
+</li>
       <li>Auditors operate under internal confidentiality and neutrality policies.</li>
       <li>Clients are expected to treat auditors with professional respect.</li>
     </ul>
+      </div>
+    </div>
   </section>
 
   <section>
@@ -186,14 +215,26 @@
       <li>Ensure employee cooperation and availability.</li>
       <li>Arrange travel, accommodation, food, and local transport for on-site audits.</li>
       <li>Refrain from influencing or pressuring auditors.</li>
+      <li>
+  Delays or restrictions in access may impact audit timelines and depth.
+</li>
+
     </ul>
   </section>
 
-  <section class="card">
+  <section>
+    <div class="container">
+      <div class="card">
     <h2>Impact & Use of Findings</h2>
     <p>
       Audit outcomes may influence decisions related to appraisal, role change, transfer, restructuring, or termination. VEXOR is not responsible for decisions made by the client based on audit findings.
     </p>
+    <p>
+  VEXOR does not mediate disputes, justify prior decisions,
+  or provide validation for predetermined outcomes.
+</p>
+      </div>
+    </div>
   </section>
 
   <section>
@@ -203,18 +244,39 @@
       <li>Remaining payment is due prior to report delivery.</li>
       <li>Discussion fees are non-refundable.</li>
       <li>Pricing may vary based on scope, location, and customization.</li>
+      <li>
+  All payments are processed through approved payment platforms.
+</li>
+
     </ul>
   </section>
 
-  <section class="card">
+
+
+  <section>
+    <div class="container">
+      <div class="card">
     <h2>Limitations</h2>
     <p>
       Audits represent an assessment at a specific point in time. Changes in personnel, structure, or business conditions after the audit may affect relevance.
     </p>
     <div class="notice">
-      <strong>Disclaimer:</strong> VEXOR shall not be liable for direct or indirect losses arising from the use or interpretation of audit reports.
+      <strong>Disclaimer:</strong> VEXOR shall not be liable for any direct, indirect, incidental,
+or consequential outcomes arising from reliance on audit findings.
+    </div>
+      </div>
     </div>
   </section>
+
+  <section>
+  <h2>Engagement Eligibility</h2>
+  <p>
+    VEXOR reserves the right to decline or terminate engagements
+    where independence, safety, ethical standards, or professional
+    objectivity cannot be reasonably maintained.
+  </p>
+</section>
+
 
   <div id="footer"></div>
 
