--- a/packages.html
+++ b/packages.html
@@ -185,6 +185,15 @@
   </p>
 </header>
 
+<section>
+  <p>
+    VEXOR packages represent structured entry points — not fixed products.
+    Each engagement is governed by professional judgment, contextual complexity,
+    and risk exposure rather than feature inclusion.
+  </p>
+</section>
+
+
 <!-- EMPLOYEE AUDIT -->
 <section>
   <h2>Employee Audit</h2>
@@ -254,7 +263,7 @@
         <li>Advanced individual audits</li>
         <li>Leadership & ownership signals</li>
         <li>Execution bottleneck mapping</li>
-        <li>Actionable team recommendations</li>
+        <li>Decision-grade team insights</li>
       </ul>
       <a href="request-discussion.html" class="cta">Request Discussion</a>
     </div>
@@ -274,7 +283,7 @@
       <li>Leadership & structure evaluation</li>
       <li>Cross-team capability analysis</li>
       <li>Systemic risk identification</li>
-      <li>Strategic recommendations</li>
+      <li>Decision-oriented strategic clarity</li>
       <li>Optional VEXOR Organizational Rating (A/B/C)</li>
     </ul>
 
