--- a/team-audit.html
+++ b/team-audit.html
@@ -99,6 +99,12 @@
       color: var(--text-muted);
     }
 
+    .container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 24px;
+}
+
     .card {
       background: var(--bg-card);
       border: 1px solid var(--border);
@@ -183,14 +189,16 @@
     <h2>Why Organizations Conduct Team Audits</h2>
     <p>
     Teams often appear functional on the surface while silently underperforming beneath it.
-    Missed ownership, unclear leadership, and dependency failures rarely show up in individual reviews.
+    Ownership gaps, leadership ambiguity, and dependency failures rarely surface in individual reviews.
   </p>
   <p>
     The Team Audit exists to expose these hidden execution risks before they turn into delivery failures or attrition.
   </p>
   </section>
 
-  <section class="card">
+  <section>
+    <div class="container">
+      <div class="card">
     <h2>This Audit Helps Answer</h2>
     <ul>
       <li>Does the team operate as a cohesive unit or as isolated contributors?</li>
@@ -199,6 +207,8 @@
     <li>Do role mismatches exist within the team structure?</li>
     <li>Can the team scale with increasing complexity and expectations?</li>
     </ul>
+      </div>
+    </div>
   </section>
 
   <section>
@@ -209,14 +219,17 @@
     <li>Newly formed or recently restructured teams</li>
     <li>Teams under leadership transition</li>
     <li>High-cost teams with unclear performance impact</li>
+    <li>Cross-functional teams with shared accountability</li>
   </ul>
 </section>
 
-  <section class="card">
+  <section>
+    <div class="container">
+      <div class="card">
     <h2>Team Evaluation Dimensions</h2>
     <ul>
       <li>Role clarity and accountability ownership</li>
-    <li>Inter-member dependency and collaboration health</li>
+    <li>Inter-member dependencies and collaboration health</li>
     <li>Decision-making flow and authority clarity</li>
     <li>Communication effectiveness</li>
     <li>Conflict handling and resolution maturity</li>
@@ -224,10 +237,13 @@
     <li>Execution discipline and reliability</li>
     <li>Alignment with organizational direction</li>
     </ul>
+      </div>
+    </div>
   </section>
 
   <section>
     <h2>Audit Structure</h2>
+    <p>The Team Audit follows a fixed structure to ensure consistency and comparability.</p>
     <div class="grid">
       <div>
       <p><strong>Team Size:</strong> Fixed at 6 members</p>
@@ -240,7 +256,9 @@
     </div>
   </section>
 
-  <section class="card">
+  <section>
+    <div class="container">
+      <div class="card">
     <h2>Audit Methodology</h2>
     <ul>
       <li>Pre-audit understanding of team objectives and structure</li>
@@ -249,6 +267,8 @@
     <li>Cross-analysis of responses and observed patterns</li>
     <li>Scoring using internal team-performance frameworks</li>
     </ul>
+      </div>
+    </div>
   </section>
 
   <section>
@@ -258,12 +278,14 @@
     <li>Role-wise contribution and dependency analysis</li>
     <li>Identified structural and behavioral risks</li>
     <li>Leadership and coordination insights</li>
-    <li>High-level corrective and optimization recommendations</li>
+    <li>Actionable risk and improvement indicators (non-prescriptive)</li>
     </ul>
     <p>Audit findings remain valid for <strong>6 months</strong>.</p>
   </section>
 
-  <section class="card">
+  <section>
+    <div class="container">
+      <div class="card">
     <h2>Engagement & Conduct Guidelines</h2>
     <ul>
       <li>Team size is fixed at six members; variations can be discussed separately.</li>
@@ -274,6 +296,9 @@
     </ul>
 
     <a href="request-discussion.html" class="cta">Request a Professional Evaluation Discussion</a>
+  
+      </div>
+    </div>
   </section>
 
   <div id="footer"></div>
