--- a/terms.html
+++ b/terms.html
@@ -14,26 +14,47 @@
 <section style="padding:60px 6%; max-width:900px;">
   <h1>Terms & Conditions</h1><br>
 
+  <h2>Nature of Services</h2>
   <p>
-    VEXOR provides evaluative audit services only.
-  </p>
+    VEXOR provides independent, evaluative workforce and capability audits. Services are diagnostic in nature and do not constitute consulting, legal, financial, or HR advisory services.
+  </p><br>
 
+  <h2>Engagement & Scope</h2>
   <p>
-    Engagements are governed by defined scope, timelines, and payment terms agreed prior to initiation.
-  </p>
+    Each engagement is governed by a defined scope, methodology, timeline, and commercial terms agreed prior to initiation. Any work outside the agreed scope requires explicit confirmation.
+  </p><br>
 
+  <h2>Fees & Payments</h2>
   <p>
-    Discussion fees are non-refundable.
-  </p>
+    Discussion fees are non-refundable. Audit fees are payable as per agreed milestones. Reports may be withheld until full payment is received.
+  </p><br>
 
+  <h2>Use of Reports & Intellectual Property</h2>
   <p>
-    VEXOR does not guarantee outcomes, decisions, or business results based on audit findings.
-  </p>
+    All audit reports and materials remain the intellectual property of VEXOR. Clients may use findings internally for decision-making purposes but may not reproduce, distribute, or publish reports without prior written consent.
+  </p><br>
 
+  <h2>Limitation of Liability</h2>
   <p>
-    By requesting a discussion or audit, clients acknowledge and accept these terms.
+    VEXOR shall not be liable for decisions, actions, or outcomes arising from the use or interpretation of audit findings. Liability, if any, shall be limited to the fees paid for the specific engagement.
+  </p><br>
+
+  <h2>Termination</h2>
+  <p>
+    VEXOR reserves the right to terminate an engagement if cooperation is withheld, information is misrepresented, or professional boundaries are compromised.
+  </p><br>
+
+  <h2>Governing Law</h2>
+  <p>
+    These terms shall be governed by and construed in accordance with applicable laws of the jurisdiction in which VEXOR operates.
+  </p><br>
+
+  <h2>Acceptance of Terms</h2>
+  <p>
+    By requesting a discussion or entering into an engagement, clients acknowledge that they have read, understood, and accepted these terms.
   </p>
 </section>
+
 
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
