--- a/about.html
+++ b/about.html
@@ -76,6 +76,15 @@
       color: var(--text-main);
     }
 
+    .container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 24px;
+}
+
+
+
+
     .card {
       background: var(--bg-card);
       border: 1px solid var(--border);
@@ -107,48 +116,140 @@
 <div id="header"></div>
 
 <header>
-  <h1>About VEXOR</h1>
-  <p>
-    VEXOR is an independent capability and workforce audit practice focused on objective evaluation, not advisory selling.
-  </p>
+  <div class="container">
+    <h1>About VEXOR</h1>
+    <p>
+      VEXOR is an independent workforce audit practice focused on objective capability evaluation,
+      execution risk identification, and organizational readiness assessment.
+    </p>
+  </div>
 </header>
 
-<section class="card">
-  <h2>What We Do</h2>
-  <p>
-    VEXOR conducts structured audits of individuals, teams, and organizations to assess capability alignment, execution risk, and future readiness.
-  </p>
-  <p>
-    Our work is evaluative, evidence-driven, and designed for decision-makers who require clarity before action.
-  </p>
+
+<section>
+  <div class="container">
+    <div class="card">
+      <h2>What We Do</h2>
+      <p>
+        VEXOR conducts structured audits of individuals, teams, and organizations to determine
+        whether people, roles, and responsibilities are aligned with real execution demands.
+      </p>
+      <p>
+        Our evaluations go beyond resumes, designations, and self-reported performance.
+        We assess actual capability depth, decision-making maturity, dependency risks,
+        and readiness for current and future operating conditions.
+      </p>
+      <p>
+        VEXOR audits deliver structured findings, risk indicators, and decision inputs — not implementation mandates or advisory ownership.
+      </p>
+    </div>
+  </div>
 </section>
 
 <section>
-  <h2>What We Are Not</h2>
-  <p>
-    VEXOR is not a recruitment agency, consulting firm, coaching service, or outsourcing vendor.
-  </p>
-  <p>
-    We do not offer implementation, advisory mandates, or outcome guarantees.
-  </p>
-</section>
-
-<section class="card">
-  <h2>How We Operate</h2>
-  <p>
-    Each engagement follows a defined audit framework with clear scope, evaluation criteria, and documented observations.
-  </p>
-  <p>
-    Commercial terms and audit depth are finalized only after a professional discussion.
-  </p>
+  <div class="container">
+    <h2>Why VEXOR Exists</h2>
+    <p>
+      Modern organizations make critical decisions based on financial reports,
+      operational metrics, and market data — yet workforce capability is often
+      assumed rather than verified.
+    </p>
+    <p>
+      VEXOR was established to address this gap.
+      To provide leadership with an objective view of whether people, roles,
+      and structures are truly capable of supporting stated goals.
+    </p>
+    <p>
+      Our work exists for organizations that value truth over comfort
+      and clarity over assumption.
+    </p>
+  </div>
 </section>
 
 <section>
-  <h2>Independence & Ethics</h2>
-  <p>
-    VEXOR operates independently of client management decisions and does not participate in internal politics, performance disputes, or employment actions.
-  </p>
+  <div class="container">
+    <div class="card">
+      <h2>Who Engages VEXOR</h2>
+      <p>
+        VEXOR works with founders, CXOs, board members, and senior leadership
+        teams who require an unbiased view of workforce capability before
+        making high-impact decisions.
+      </p>
+      <p>
+        Typical engagement triggers include scaling challenges,
+        execution failures, leadership dependency risks, restructuring,
+        or concerns about future readiness.
+      </p>
+      <p>
+        Organizations seeking validation, cosmetic audits, or
+        pre-decided outcomes are not a fit.
+      </p>
+    </div>
+  </div>
 </section>
+
+
+
+<section>
+  <div class="container">
+    <h2>What We Are Not</h2>
+    <p>
+      VEXOR is not a recruitment agency, staffing vendor, training provider, or consulting firm.
+      We do not sell implementation services, coaching programs, or transformation roadmaps.
+    </p>
+    <p>
+      We do not align incentives with hiring, promotions, layoffs, or organizational restructuring.
+      Our role ends at evaluation and reporting.
+    </p>
+    <p>
+      This separation is intentional. It preserves audit integrity and prevents conflicts of interest.
+    </p>
+  </div>
+</section>
+
+
+
+
+
+<section>
+  <div class="container">
+    <div class="card">
+      <h2>How We Operate</h2>
+      <p>
+        Every VEXOR engagement follows a defined audit framework with clearly documented scope,
+        evaluation criteria, and evidence-backed observations.
+      </p>
+      <p>
+        Engagements begin with either a written request or a professional discussion to assess
+        suitability, audit depth, and organizational context.
+      </p>
+      <p>
+        Commercial terms, timelines, and audit boundaries are finalized only after mutual clarity
+        is established.
+      </p>
+    </div>
+  </div>
+</section>
+
+
+<section>
+  <div class="container">
+    <h2>Independence & Ethics</h2>
+    <p>
+      VEXOR operates independently of client management decisions and does not participate
+      in internal politics, performance disputes, or employment actions.
+    </p>
+    <p>
+      Audit findings are documented objectively and delivered without dilution,
+      alignment pressure, or outcome influence.
+    </p>
+    <p>
+      We believe workforce truth, even when uncomfortable, is more valuable than
+      agreeable narratives.
+    </p>
+  </div>
+</section>
+
 
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
