--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -27,6 +27,8 @@
     footer a:hover {
       color: var(--text-main);
     }
+
+    
   </style>
 </head>
 <body>
@@ -37,22 +39,61 @@
   <h1>Privacy Policy</h1><br>
 
   <p>
-    VEXOR respects privacy and handles information responsibly.
-  </p>
+    VEXOR respects privacy and is committed to handling information in a responsible,
+    limited, and purpose-bound manner.
+  </p><br>
 
+  <h2>Information We Collect</h2>
   <p>
-    Information shared during discussions or audits is used solely for evaluation purposes.
-    We do not sell, rent, or trade personal or organizational data.
+    VEXOR collects only the minimum information required to respond to inquiries
+    and conduct professional engagements. This may include:
   </p>
+  <ul>
+    <li>Name, email address, and contact details submitted via forms or email</li>
+    <li>Organizational information shared during discussions or audits</li>
+    <li>Payment-related confirmation details processed through third-party platforms</li>
+  </ul><br>
 
+  <h2>How Information Is Used</h2>
   <p>
-    Emails and contact details are used only for communication related to requests or engagements.
+    Information is used strictly for professional communication,
+    engagement evaluation, audit execution, and administrative purposes.
   </p>
-
   <p>
-    By engaging with VEXOR, you consent to this limited and purpose-bound data usage.
+    VEXOR does not use personal or organizational data for marketing,
+    profiling, or unrelated outreach.
+  </p><br>
+
+  <h2>Data Sharing & Third Parties</h2>
+  <p>
+    VEXOR does not sell, rent, or trade personal or organizational data.
+  </p>
+  <p>
+    Limited information may be processed through trusted third-party services
+    such as payment processors or contact form providers solely to enable
+    requested functionality.
+  </p><br>
+
+  <h2>Data Retention & Security</h2>
+  <p>
+    Information is retained only for as long as necessary to fulfill
+    the purpose for which it was collected.
+  </p>
+  <p>
+    Reasonable administrative and technical safeguards are used to
+    protect information against unauthorized access or misuse.
+  </p><br>
+
+  <h2>Your Rights & Contact</h2>
+  <p>
+    You may request clarification, correction, or deletion of your information
+    by contacting VEXOR directly.
+  </p>
+  <p>
+    Continued interaction with VEXOR constitutes consent to this privacy policy.
   </p>
 </section>
+
 
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
