--- a/about.html
+++ b/about.html
@@ -109,6 +109,10 @@
       color: var(--text-muted);
       margin-right: 20px;
     }
+
+    footer a:hover {
+      color: var(--text-main);
+    }
   </style>
 </head>
 <body>
